# DistributedSystemsAPI

./: .gitignore  Dockerfile  README.md  check.sh  consume_script.py  docker-compose.yml  package-lock.json  pyproject.toml  report.md  requirements.txt  run_api.sh  run_full_project.sh  run_microservices_docker.sh  run_microservices_podman.sh  run_script.sh
.github/workflows/: ci.yaml
activity_api/: .env.docker  .gitignore  public.pem
activity_api/src/: error_handlers.py
activity_api/src/database/: __init__.py
activity_api/src/database/models/: watched_movie.py
activity_api/src/routes/: __init__.py  newsfeed_resource.py  watched_movie_resource.py
activity_api/tests/routes/: test_newsfeed_resource.py  test_watched_movie_resource.py
alembic/versions/: 18fb4097cd64_initial.py
api/: .env.docker  Dockerfile  alembic.ini  app.py  consume_api.py  consume_api_docker.py  pyproject.toml  requirements.txt
api/src/: app.py  authentication.py  error_handlers.py  wsgi.py
api/src/database/models/: __init__.py  genre.py  movie.py  rating.py  rating_review.py  user.py  watched_movie.py
api/src/routes/: logout_resource.py  movies_resource.py  sign_up_resource.py
api/tests/: conftest.py
api/tests/database/: test_movie.py  test_rating.py  test_rating_review.py  test_user.py
api/tests/routes/: test_login_resource.py  test_logout_resource.py  test_movies_resource.py  test_signup_resource.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/auth/: AuthContext.tsx  PrivateRoute.tsx
frontend/src/components/: Dashboard.tsx  FriendsPage.tsx  FrontPage.tsx  LoginPage.tsx  MovieModal.tsx  MoviePage.tsx  SignUpPage.tsx  UserPage.tsx
frontend/src/css/: DashBoard.css  FriendsPage.css  FrontPage.css  Login.css  MovieModal.css  MoviePage.css  UserPage.css
frontend/src/movies/: fetchMoviesByIds.tsx
frontend/src/routing/: useNavigation.tsx
logging_api/: .env  .env.docker  Dockerfile
logging_api/alembic/versions/: 3271297ac676_setup_logging.py
logging_api/src/: app.py
logging_api/src/database/: database.py
logging_api/src/database/models/: __init__.py
logging_api/src/routes/: __init__.py  newsfeed_resource.py  watched_movie_resource.py
logging_api/tests/: conftest.py
logging_api/tests/routes/: test_newsfeed_resource.py  test_watched_movie_resource.py
movie_api/: .env  .env.docker  Dockerfile  app.py  pyproject.toml  requirements.txt
movie_api/alembic/versions/: d4469cb02ceb_new_project_setup.py
movie_api/src/: app.py  error_handlers.py  limiter.py
movie_api/src/database/: load_movie_data.py
movie_api/src/database/models/: __init__.py  genre.py  movie.py
movie_api/src/routes/: __init__.py  movies_resource.py
movie_api/tests/: conftest.py
movie_api/tests/database/: test_genre.py  test_movie.py
movie_api/tests/routes/: test_movies_resource.py
nginx/: default.conf
preference_api/: .env.docker  app.py
preference_api/alembic/: env.py
preference_api/src/: app.py
preference_api/src/database/models/: rating.py  rating_review.py
preference_api/src/routes/: __init__.py  favorite_resource.py  quickchart.py  rating_review_resource.py  ratings_resource.py  recommendation_resource.py
preference_api/tests/database/: test_rating_review.py
preference_api/tests/routes/: test_favorite_resource.py  test_rating_resource.py  test_recommendation_resource.py
rating_api/: .env  .env.docker  Dockerfile  requirements.txt
rating_api/alembic/versions/: 8427c79bec23_favorite_service_setup.py  b026ed108cfd_setup_favorite.py
rating_api/src/: app.py  cache.py  error_handlers.py
rating_api/src/database/models/: __init__.py  favorite_movie.py  rating.py
rating_api/src/routes/: __init__.py  favorite_resource.py  ratings_resource.py  recommendation_resource.py
rating_api/tests/: conftest.py
rating_api/tests/database/: test_rating.py  test_rating_review.py
rating_api/tests/routes/: test_rating_resource.py  test_recommendation_resource.py
src/: app.py  authentication.py  config.py  error_handlers.py  wsgi.py
src/database/: base.py  database_access.py
src/database/models/: user.py
src/routes/: __init__.py  login_resource.py  movies_resource.py
tests/: conftest.py
tests/routes/: test_logout_resource.py  test_movies_resource.py
user_api/: .env  .env.docker  Dockerfile  app.py  private.pem
user_api/alembic/versions/: a0fc4a3e3af1_users_setup.py
user_api/src/: app.py  config.py  error_handlers.py  limiter.py
user_api/src/database/models/: user.py
user_api/src/routes/: __init__.py  friends_resource.py  user_resource.py
user_api/tests/database/: test_user.py
user_api/tests/routes/: test_friends_resource.py  test_user_resource.py
