[project]
name = "DistributedSystemsAPI"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=1.3.0",
    "dotenv>=0.0.5",
    "flask_cors>=5.0.1",
    "flask_restx>=0.2.0",
    "flask_session>=0.4.0",
    "flask_sqlalchemy>=2.5.0",
    "confz>=2.1.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
    "psycopg2-binary>=2.9.10"
]

[tool.pylint]
max-line-length = 120
disable = [
    "missing-docstring",  # Disable docstring warnings
    "invalid-name",       # Allow short variable names
    "too-few-public-methods"
]
fail-under = 10.0

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_configs = true

